Fix CRT blur: didnt work on firefox, low color depth on chrome

--- a/src/App.css
+++ b/src/App.css
@@ -252,6 +252,6 @@ div.stream-selector-and-selection-options {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
-  background-size: 100% 3px, 2px 100%;
+  background: linear-gradient(rgba(0,0,0,.25) 0%,rgba(0,0,0,0) 30%,rgba(0,0,0,0) 70%,rgba(0,0,0,.25) 100%);
+  background-size: 100% 4px;
 }
